-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
bdee3fb98 (dev), 1ef9d25dd (6.8)
-
DaVinci 107
When QDoc parses the following Foo.qml file:
import QtQuick import MyModule as Bar Bar.Item { id: root }
It will mark QtQuick.Item as the base for type Foo, which is incorrect.
- resulted from
-
QTBUG-130646 qdoc hangs when generating QML documentation
-
- Closed
-
| For Gerrit Dashboard: QTBUG-130734 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 601188,2 | qdoc: QML Visitor: Handle namespaced imports | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 602817,3 | qdoc: QML Visitor: Handle namespaced imports | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |