src/qdoc/qdoc/tests/validateqdocoutputfiles/testdata/qml_namespaces/src/AbstractApplicationWindow.qml
@@ -1,0 +1,15 @@
+// Copyright (C) 2024 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
+
+import QtQuick
+import Some.Module as SM
+import QtQuick.Controls as QQC2
+
+/*!
+    \qmltype AbstractApplicationWindow
+    \inqmlmodule Some.Module
+
+    A window that provides some basic features needed for all apps.
+ */
+
+QQC2.ApplicationWindow {}
